fixed design drop button

--- a/src/components/DevItem/styles.css
+++ b/src/components/DevItem/styles.css
@@ -58,7 +58,7 @@ li.dev-item a:hover{
   right: 8px;
   width: 40px;
   height: 40px;
-  background-color: blue;
+  background-color: #fff;
   text-align: center;
 }
 
